@@ -28,6 +28,6 @@ public class LastActivityMonitorImpl implements LastActivityMonitor {
     @Override
     public Integer getInactiveInMinutes() {
         long duration = new Date().getTime() - lastActivity;
-        return new Long(TimeUnit.MILLISECONDS.toMinutes(duration)).intValue();
+        return Long.valueOf(TimeUnit.MILLISECONDS.toMinutes(duration)).intValue();
     }
 }
