@@ -81,7 +81,7 @@ public class TipiCheckbox extends TipiSwingComponentImpl {
 			return myButton.getText();
 		}
 		if (name.equals("selected")) {
-			return new Boolean(myButton.isSelected());
+			return Boolean.valueOf(myButton.isSelected());
 		}
 
 		return super.getComponentValue(name);
