@@ -1,5 +1,6 @@
 package com.dexels.navajo.tipi.components.swingimpl;
 
+import java.awt.event.InputEvent;
 import java.awt.event.KeyEvent;
 import java.awt.event.KeyListener;
 import java.util.HashMap;
@@ -87,9 +88,8 @@ public class TipiTextArea extends TipiSwingComponentImpl {
 
 			public Map<String, Object> getEventMap(KeyEvent e) {
 				Map<String, Object> hm = new HashMap<String, Object>();
-				hm.put("code", new Integer(e.getKeyCode()));
-				hm.put("modifiers",
-						KeyEvent.getKeyModifiersText(e.getModifiers()));
+				hm.put("code", Integer.valueOf(e.getKeyCode()));
+				hm.put("modifiers",InputEvent.getModifiersExText(e.getModifiersEx()));
 				hm.put("key", KeyEvent.getKeyText(e.getKeyCode()));
 				return hm;
 			}
