@@ -2,6 +2,7 @@ package com.dexels.navajo.tipi.components.swingimpl;
 
 import java.awt.event.FocusEvent;
 import java.awt.event.FocusListener;
+import java.awt.event.InputEvent;
 import java.awt.event.KeyEvent;
 import java.awt.event.KeyListener;
 import java.util.HashMap;
@@ -85,9 +86,10 @@ public class TipiTextField extends TipiSwingComponentImpl {
 
 			public Map<String, Object> getEventMap(KeyEvent e) {
 				Map<String, Object> hm = new HashMap<String, Object>();
-				hm.put("code", new Integer(e.getKeyCode()));
+				hm.put("code", Integer.valueOf(e.getKeyCode()));
 				hm.put("modifiers",
-						KeyEvent.getKeyModifiersText(e.getModifiers()));
+						InputEvent.getModifiersExText(e.getModifiersEx())
+						);
 				hm.put("key", KeyEvent.getKeyText(e.getKeyCode()));
 				return hm;
 			}
