@@ -95,7 +95,7 @@ public class TipiToggleButton extends TipiSwingComponentImpl {
 			return myButton.getText();
 		}
 		if (name.equals("selected")) {
-			return new Boolean(myButton.isSelected());
+			return Boolean.valueOf(myButton.isSelected());
 		}
 
 		return super.getComponentValue(name);
